--- a/components/navbar.module.scss
+++ b/components/navbar.module.scss
@@ -3,7 +3,6 @@
   background-color: var(--bg-color);
   color: var(--font-color-dark);
   font-family: 'italiana', 'Gill Sans', 'TeX Gyre Adventor', sans-serif;
-  //border-bottom: 0.5px solid var(--font-color);
 }
 
 .PLogo {
@@ -17,6 +16,7 @@
   filter: blur(2px);
   backdrop-filter: blur(1px);
   width: 100vw;
+  box-shadow: 0px 2px 2px rgba(var(--font-color), 0.2);
 }
 
 .navBar:hover {
