--- a/styles/global.scss
+++ b/styles/global.scss
@@ -31,7 +31,7 @@ body {
   padding: 0;
   margin: 0;
   line-height: 1.6;
-  font-size: var(--step-1);
+  font-size: 18px;
   color: var(--font-color);
   padding-top: 60px !important;
   width: 100vw;
