--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -19,6 +19,15 @@ $breakpoint-bootstraplg: 992px;
 
 // Font sizes calculated via https://type-scale.com/  using the golden ratio
 
+/* RELATED TO Main */
+.heading4Xl {
+  font-size: var(--step-6);
+  line-height: 5rem;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+  padding-bottom: 10rem;
+}
+
 /* RELATED TO h1 */
 .heading3Xl {
   font-size: var(--step-5);
@@ -68,7 +77,7 @@ $breakpoint-bootstraplg: 992px;
 
 .textDescriptions {
   font-family: 'Abhaya Libre', serif;
-  font-size: var(--step-1);
+  font-size: var(--step-0);
   line-height: 1.5;
 }
 
@@ -93,14 +102,19 @@ $breakpoint-bootstraplg: 992px;
   color: var(--font-color);
 }
 
+.verticalText2 {
+    @media (max-width: $breakpoint-bootstrapmd) {
+      position: absolute;
+      white-space: nowrap;
+      top: -12rem;
+  }
+}
+
 /* LANDING PAGE */
 
 .designerText,
 .visualText {
   @media (max-width: $breakpoint-mobileL) {
-    font-size: var(--step-4);
-  }
-  @media (max-width: $breakpoint-bootstrapmd) {
     font-size: var(--step-4);
   }
 }
@@ -406,6 +420,20 @@ $amount: 20;
   align-self: center;
 }
 
+.designsPicSmaller {
+  width: 50%;
+  height: auto;
+  justify-content: center;
+  align-self: center;
+}
+
+.designsPicFitTall {
+  width: auto;
+  height: 100%;
+  justify-content: center;
+  align-self: center;
+}
+
 .mockupPic {
   width: 70%;
   height: auto;
@@ -431,4 +459,9 @@ $amount: 20;
 .smallerPics {
   width: 100%;
   height: auto;
+}
+
+.paragraph {
+  font-family: 'Abhaya Libre', serif;
+  color: var(--font-color);
 }
