--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,12 +4,13 @@ html,
   --bg-color: #f8eded;
   --font-color: #383636;
   --color-white: #ffffff;
-  --bs-border-color: var(--font-color)!important;
+  --alpha: 0.8;
+  --bs-border-color: var(--font-color) !important;
   --step--2: clamp(0.63rem, calc(0.56rem + 0.37vw), 0.84rem);
   --step--1: clamp(0.84rem, calc(0.75rem + 0.49vw), 1.13rem);
-  --step-0: clamp(1.13rem, calc(0.99rem + 0.65vw), 1.50rem);
-  --step-1: clamp(1.50rem, calc(1.33rem + 0.87vw), 2.00rem);
-  --step-2: clamp(2.00rem, calc(1.77rem + 1.16vw), 2.67rem);
+  --step-0: clamp(1.13rem, calc(0.99rem + 0.65vw), 1.5rem);
+  --step-1: clamp(1.5rem, calc(1.33rem + 0.87vw), 2rem);
+  --step-2: clamp(2rem, calc(1.77rem + 1.16vw), 2.67rem);
   --step-3: clamp(2.66rem, calc(2.36rem + 1.55vw), 3.55rem);
   --step-4: clamp(3.55rem, calc(3.14rem + 2.06vw), 4.74rem);
   --step-5: clamp(8.54rem, calc(7.55rem + 4.95vw), 11.39rem);
