--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,7 @@ html,
   --font-color: #383636;
   --color-white: #ffffff;
   --alpha: 0.8;
+  --letterspacing: 0.08rem;
   --bs-border-color: var(--font-color) !important;
   --step--2: clamp(0.63rem, calc(0.56rem + 0.37vw), 0.84rem);
   --step--1: clamp(0.84rem, calc(0.75rem + 0.49vw), 1.13rem);
@@ -25,6 +26,11 @@ html,
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
      */
+
+@font-face {
+  font-family: 'BobaCups';
+  src: url('../public/Fonts/Boba_Cups.woff2') format('woff2');
+}
 
 body {
   background-color: var(--bg-color) !important;
@@ -76,6 +82,7 @@ h5,
 h6 {
   font-family: 'Italiana', sans-serif;
   color: var(--font-color);
+  letter-spacing: var(--letterspacing);
 }
 
 p {
