--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -465,3 +465,29 @@ $amount: 20;
   font-family: 'Abhaya Libre', serif;
   color: var(--font-color);
 }
+
+/*Clitonisa*/
+
+.clitoText {
+  font-family: 'Poppins', sans-serif;
+  font-size: var(--step-0);
+  font-weight: 100;
+  line-height: var(--step-1);
+  letter-spacing: normal;
+
+}
+
+.clitoTitle1 {
+  font-family: 'BobaCups', sans-serif;
+  font-size: var(--step-2);
+  line-height: 5;
+  letter-spacing: normal;
+}
+
+.clitoTitle2 {
+  font-family: 'Poppins', sans-serif;
+  font-size: var(--step-1);
+  font-weight: 800;
+  line-height: var(--step-2);
+  letter-spacing: normal;
+}
