--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -103,10 +103,10 @@ $breakpoint-bootstraplg: 992px;
 }
 
 .verticalText2 {
-    @media (max-width: $breakpoint-bootstrapmd) {
-      position: absolute;
-      white-space: nowrap;
-      top: -12rem;
+  @media (max-width: $breakpoint-bootstrapmd) {
+    position: absolute;
+    white-space: nowrap;
+    top: -12rem;
   }
 }
 
@@ -470,24 +470,40 @@ $amount: 20;
 
 .clitoText {
   font-family: 'Poppins', sans-serif;
-  font-size: var(--step-0);
-  font-weight: 100;
+  font-size: var(--step--1);
+  font-weight: 300;
   line-height: var(--step-1);
   letter-spacing: normal;
-
+  color:var(--clito-text);
 }
 
 .clitoTitle1 {
   font-family: 'BobaCups', sans-serif;
-  font-size: var(--step-2);
-  line-height: 5;
+  font-size: var(--step-4);
+  line-height: 2.2;
   letter-spacing: normal;
+  color: var(--clito-h2);
+  text-align: center;
 }
 
 .clitoTitle2 {
   font-family: 'Poppins', sans-serif;
   font-size: var(--step-1);
-  font-weight: 800;
+  font-weight: 600;
   line-height: var(--step-2);
   letter-spacing: normal;
+  color: var(--clito-h3);
 }
+
+.clitoLink {
+  color: var(--clito-h2);
+}
+
+.clitoBgRosa {
+  background-color: var(--clito-bg-color);
+}
+
+.fullHeightPic {
+  height: 100%;
+}
+
