Clitonisa page improved

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,6 +5,7 @@ html,
   --font-color: #383636;
   --color-white: #ffffff;
   --clito-bg-color: #f5a0c4;
+  --clito-bg-text: #eff0fa;
   --clito-text: #060605;
   --clito-h2: #d2608a;
   --clito-h3: #3a4487;
@@ -25,6 +26,7 @@ html,
   --bg-color: #5b6876;
   --font-color: #f8eded;
   --clito-bg-color: #232d3a;
+  --clito-bg-text: #232d3a;;
   --clito-text: #fdedb0;
   --clito-h2: #f5a0c4;
   --clito-h3: #eff0fa;
