--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -499,6 +499,10 @@ $amount: 20;
   color: var(--clito-h2);
 }
 
+.clitoBgText {
+  background-color: var(--clito-bg-text);
+}
+
 .clitoBgRosa {
   background-color: var(--clito-bg-color);
 }
