--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -72,7 +72,7 @@ $breakpoint-bootstraplg: 992px;
 /* RELATED TO h6 */
 .headingSm {
   font-size: var(--step-0);
-  line-height: 1.2;
+  line-height: var(--step-1);
 }
 
 .textDescriptions {
