--- a/styles/global.scss
+++ b/styles/global.scss
@@ -12,15 +12,18 @@ html,
   --alpha: 0.8;
   --letterspacing: 0.08rem;
   --bs-border-color: var(--font-color) !important;
-  --step--2: clamp(0.63rem, calc(0.56rem + 0.37vw), 0.84rem);
-  --step--1: clamp(0.84rem, calc(0.75rem + 0.49vw), 1.13rem);
-  --step-0: clamp(1.13rem, calc(0.99rem + 0.65vw), 1.5rem);
-  --step-1: clamp(1.5rem, calc(1.33rem + 0.87vw), 2rem);
-  --step-2: clamp(2rem, calc(1.77rem + 1.16vw), 2.67rem);
-  --step-3: clamp(2.66rem, calc(2.36rem + 1.55vw), 3.55rem);
-  --step-4: clamp(3.55rem, calc(3.14rem + 2.06vw), 4.74rem);
-  --step-5: clamp(8.54rem, calc(7.55rem + 4.95vw), 11.39rem);
-}
+  --step--2: clamp(0.5rem, 0.4565rem + 0.2174vw, 0.625rem);
+  --step--1: clamp(0.7075rem, 0.6462rem + 0.3065vw, 0.8838rem);
+  --step-0: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
+  --step-1: clamp(1.4138rem, 1.2907rem + 0.6152vw, 1.7675rem);
+  --step-2: clamp(1.9994rem, 1.8255rem + 0.8696vw, 2.4994rem);
+  --step-3: clamp(2.8269rem, 2.581rem + 1.2293vw, 3.5338rem);
+  --step-4: clamp(3.9975rem, 3.6499rem + 1.738vw, 4.9969rem);
+  --step-5: clamp(5.6525rem, 5.161rem + 2.4576vw, 7.0656rem);
+  --step-6: clamp(7.9925rem, 7.2973rem + 3.4761vw, 9.9913rem);}
+
+/* @link https://utopia.fyi/type/calculator?c=320,16,1.414,1240,20,1.414,6,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
 
 [data-theme='dark'] {
   --bg-color: #5b6876;
