Illustration/UX Tab

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -5,7 +5,7 @@ html,
   --font-color: #383636;
   --color-white: #ffffff;
   --clito-bg-color: #f5a0c4;
-  --clito-bg-text: #eff0fa;
+  --clito-bg-text: #f8eded;
   --clito-text: #060605;
   --clito-h2: #d2608a;
   --clito-h3: #3a4487;
