--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -247,6 +247,12 @@ $breakpoint-bootstraplg: 992px;
   max-width: 20%;
 }
 
+.activeTab {
+  color: var(--font-color);
+  -webkit-text-stroke: 1.5px var(--font-color);
+  border-bottom: 1.5px solid var(--font-color);
+}
+
 //from https://www.30secondsofcode.org/css/s/hover-underline-animation
 
 .underlined {
@@ -468,11 +474,11 @@ $amount: 20;
 
 .clitoText {
   font-family: 'Poppins', sans-serif;
-  font-size: var(--step--1);
+  font-size: var(--step-0);
   font-weight: 300;
   line-height: var(--step-1);
   letter-spacing: normal;
-  color:var(--clito-text);
+  color: var(--clito-text);
 }
 
 .clitoTitle1 {
@@ -509,3 +515,11 @@ $amount: 20;
   height: 100%;
 }
 
+.footerBox{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3em 0 5em 0;
+  padding-top: 5em; 
+  background-color: var(--bg-color);
+}
