--- a/components/navbar.module.scss
+++ b/components/navbar.module.scss
@@ -10,6 +10,11 @@
   width: auto;
 }
 
+.navBarAll {
+  background-color: var(--bg-color);
+
+}
+
 .navBar {
   height: 5rem;
   font-size: large;
@@ -17,12 +22,14 @@
   backdrop-filter: blur(1px);
   width: 100vw;
   box-shadow: 0px 2px 2px rgba(var(--font-color), 0.2);
+  color: var(--font-color);
 }
 
 .navBar:hover {
   filter: none;
   transition: all 0.3s ease-in-out;
   backdrop-filter: none;
+  color: var(--font-color);
 }
 
 /*change this*/
@@ -64,11 +71,12 @@
   width: 10%;
   border: none;
   opacity: 0.7;
-  
+  color: var(--font-color);
 }
 
 // Check this out
 .burgerMenu:active {
+  color: var(--font-color);
   background-color: var(--bg-color);
   opacity: 0.8;
   backdrop-filter: blur(1px);
@@ -79,7 +87,7 @@
 
 .navbarTogglerIcon {
   border: none;
-  color: var(--font-color)
+  color: var(--font-color);
 }
 
 // .navbarTogglerIcon.close {
@@ -88,7 +96,7 @@
 
 .navbarTogglerIcon::selection {
   border: none;
-  color: var(--font-color)
+  color: var(--font-color);
 }
 
 .dropdownMenuBg {
